Bug 130590 - FILESAVE XLSX Position of data point label of linechart is not retained
Summary: FILESAVE XLSX Position of data point label of linechart is not retained
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords: filter:xlsx
: 130588 (view as bug list)
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-02-11 14:13 UTC by NISZ LibreOffice Team
Modified: 2020-02-18 07:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc. (7.26 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-02-11 14:14 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Calc (58.42 KB, image/png)
2020-02-11 14:15 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-02-11 14:13:36 UTC
Description:
The data label position of linechart is not retained, after we save the file as Xlsx with LibreOffice Calc.

Steps to Reproduce:
    1. Create a column chart in Calc.
    2. Insert data labels.
    3. Drag and drop (reposition) a data point label.
    4. Save the file to XLSX.
    5. Open in Calc.


Actual Results:
The new position of data point label is not retained. 

Expected Results:
The new position of data point label should be retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-02-11 14:14:35 UTC
Created attachment 157795 [details]
Example file from Calc.
Comment 2 NISZ LibreOffice Team 2020-02-11 14:15:00 UTC
Created attachment 157796 [details]
Screenshot of the problem in Calc
Comment 3 László Németh 2020-02-17 16:59:03 UTC
*** Bug 130588 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2020-02-17 17:00:22 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5339d0800ccdcd325294e61f8ae9e67648beb035

tdf#130590 Chart OOXML export: fix custom label position

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.