tdf#130590 Chart OOXML export: fix custom label position

in case of all chart types except pie chart.

Follow-up of commit 4223ff2be69f03e571464b0b09ad0d278918631b
(tdf#48436 Chart: add CustomLabelPosition UNO API property)

Change-Id: I3ff1ca13928315f27988ae27c462a2f05354bc49